# hobot_dnn_modified

./: .gitignore  test.py
dnn_node/: CMakeLists.txt
dnn_node/include/dnn_node/util/output_parser/detection/: ptq_yolo11_output_parser.h  ptq_yolo3_darknet_output_parser.h
dnn_node/src/easy_dnn/: model_infer_task.cpp
dnn_node/src/util/output_parser/: utils.cpp
dnn_node/src/util/output_parser/detection/: ptq_yolo11_output_parser.cpp  ptq_yolo11_seg_output_parser.cpp
dnn_node/src/util/output_parser/segmentation/: ptq_unet_output_parser.cpp
dnn_node_example/: CMakeLists.txt
dnn_node_example/config/common/: road.list
dnn_node_example/config/rdkultra/: yolov5xworkconfig.json
dnn_node_example/config/x5/: mobilenet_ssd_workconfig.json  mobilenet_unet_workconfig.json  yolo11workconfig.json  yolov3workconfig.json  yolov5xworkconfig.json
dnn_node_example/include/: dnn_example_node.h
dnn_node_example/include/post_process/: post_process_unet.h
dnn_node_example/launch/: dnn_node_example.launch.py
dnn_node_example/src/: dnn_example_node.cpp  image_utils.cpp
hobot_codec/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
hobot_codec/include/: hobot_codec_base.h  hobot_codec_data.h  hobot_codec_impl.h  hobot_codec_node.h  video_utils.hpp
hobot_codec/include/decoder/: hobot_decoder_common.hpp
hobot_codec/include/decoder/rdkultra/: hobot_vdec.h
hobot_codec/include/decoder/x3/: hobot_vdec.h
hobot_codec/include/decoder/x5/: hobot_vdec.h
hobot_codec/include/decoder/x86/: hobot_vdec.h
hobot_codec/include/encoder/rdkultra/: hobot_venc.h
hobot_codec/include/encoder/x3/: hobot_venc.h
hobot_codec/include/encoder/x5/: hobot_venc.h
hobot_codec/include/encoder/x86/: hobot_venc.h
hobot_codec/launch/: hobot_codec.launch.py  hobot_codec_decode.launch.py  hobot_codec_encode.launch.py
hobot_codec/src/: example.cpp  hobot_codec_base.cpp  hobot_codec_impl.cpp  hobot_codec_node.cpp
hobot_codec/src/decoder/rdkultra/: hobot_vdec.cpp
hobot_codec/src/decoder/x3/: hobot_vdec.cpp
hobot_codec/src/decoder/x5/: hobot_vdec.cpp
hobot_codec/src/decoder/x86/: hobot_vdec.cpp
hobot_codec/src/encoder/rdkultra/: hobot_venc.cpp
hobot_codec/src/encoder/x3/: hobot_venc.cpp
hobot_codec/src/encoder/x5/: hobot_venc.cpp
hobot_codec/src/encoder/x86/: hobot_venc.cpp
hobot_dnn/dnn_node/include/dnn_node/util/output_parser/detection/: ptq_yolo11_output_parser.h
hobot_dnn/dnn_node_example/config/x5/: fcosworkconfig.json
hobot_dnn/dnn_node_example/launch/: my_dnn_node.launch.py
hobot_dnn_modified/dnn_node/: CMakeLists.txt
hobot_dnn_modified/dnn_node/include/dnn_node/util/output_parser/detection/: ptq_yolo11_seg_output_parser.h
hobot_dnn_modified/dnn_node/src/util/output_parser/detection/: ptq_yolo11_output_parser.cpp  ptq_yolo11_seg_output_parser.cpp
hobot_dnn_modified/dnn_node_example/: README.md  README_cn.md
hobot_dnn_modified/dnn_node_example/config/common/: road.list
hobot_dnn_modified/dnn_node_example/config/x5/: yolo11_b2workconfig.json  yolo11segworkconfig.json  yolov5xworkconfig.json
hobot_dnn_modified/dnn_node_example/include/: dnn_example_node.h
hobot_dnn_modified/dnn_node_example/launch/: dnn_node_example_yolo11_seg_feedback.launch.py  my_dnn_node.launch.py
hobot_dnn_modified/dnn_node_example/src/: dnn_example_node.cpp  image_utils.cpp
hobot_shm/: package.xml
hobot_shm/launch/: hobot_shm.launch.py
hobot_usb_cam/: CHANGELOG.md  README.md  README_cn.md  package.xml
hobot_usb_cam/include/hobot_usb_cam/: hobot_usb_cam.hpp
hobot_usb_cam/launch/: hobot_usb_cam.launch.py
hobot_usb_cam/src/: hobot_usb_cam_node.cpp
hobot_websocket/src/websocket/: websocket.cpp
